proxima/tmp/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: whoamiff
        image: traefik/whoami:latest
        ports:
          - containerPort: 80
            name: http
        securityContext:
          allowPrivilegeEscalation: false
#          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
